--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Open graph tags for better previews -->
+
+  <!-- Facebook -->
+  <meta property=“og:image” content=“/assets/lilac-fb-big.png” />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter -->
+  <meta name="twitter:image" content="/assets/lilac-tw-sq.png">
+
+  <!-- end open graph stuff -->
+
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
