--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,12 +6,13 @@
   <!-- Open graph tags for better previews -->
 
   <!-- Facebook -->
-  <meta property=“og:image” content=“/assets/lilac-fb-big.png” />
+  <meta property="og:url" content="http://goldenmeanie.net/lilac-walk/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Lilac Walk" />
+  <meta property="og:description" content="A very local map of lilac bushes in Providence, that you can reach from the sidewalk." />
+  <meta property="og:image" content="http://goldenmeanie.net/lilac-walk/assets/open-graph-etc/lilac-fb-big.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-
-  <!-- Twitter -->
-  <meta name="twitter:image" content="/assets/lilac-tw-sq.png">
 
   <!-- end open graph stuff -->
 
