drying out title and description

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
   <!-- Open graph tags for better previews -->
 
   <!-- Facebook -->
-  <meta property="og:url" content="http://goldenmeanie.net/lilac-walk/" />
+  <meta property="og:url" content="https://smellymap.us" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Lilac Walk" />
-  <meta property="og:description" content="A very local map of lilac bushes in Providence, that you can reach from the sidewalk." />
-  <meta property="og:image" content="http://goldenmeanie.net/lilac-walk/assets/open-graph-etc/lilac-fb-big.png" />
+  <meta property="og:title" content="{{ site.title }}" />
+  <meta property="og:description" content="{{ site.description }}" />
+  <meta property="og:image" content="https://smellymap.us/assets/open-graph-etc/lilac-fb-big.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
@@ -21,6 +21,6 @@
 
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css' rel='stylesheet' />
-  <link rel="stylesheet" href="assets/css/main.css" media="screen" title="css" charset="utf-8">
+  <link rel="stylesheet" href="/assets/css/main.css" media="screen" title="css" charset="utf-8">
 
 </head>
