Moving mastodon link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
 
     {{ content }}
 
+    <div class="attribution">
+      <p><a rel="me" href="https://mastodon.publicinterest.town/@goldenmeanie">Mastodon</a></p>
+    </div>
   </body>
 
 </html>
