--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -27,3 +27,8 @@ dl, dd, ol, ul, figure {
     font-family: sans-serif;
   }
 }
+.attribution {
+  position: absolute;
+  width: 100vw;
+  z-index: 2000;
+}
